objects/Attachment__c.object
<CustomObject>
    <description>Custom Object to Manage Visibility of Booking Package and Load Attachments</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachments (Account)</relationshipLabel>
        <relationshipName>Attachments_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <description>Reference to NoteAndAttachment</description>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <formula>IF( ISBLANK(CREATED_BY__c ),  CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName ,  CREATED_BY__r.FirstName &amp; &quot; &quot; &amp;  CREATED_BY__r.LastName )</formula>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Approval_Step__c</fullName>
        <label>Booking Package Approval Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Region__c</fullName>
        <formula>TEXT( Booking_Package__r.Region__c )</formula>
        <label>Booking Package Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Status__c</fullName>
        <formula>TEXT(Booking_Package__r.Status__c )</formula>
        <label>Booking Package Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Steps_Remaining__c</fullName>
        <label>Booking Package Steps Remaining</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Package / Provisional Request</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Booking_Package__c.Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Booking_Package__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CREATED_BY</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATED__c</fullName>
        <label>CREATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FILE_DATE__c</fullName>
        <label>FILE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FILE_EXT__c</fullName>
        <label>FILE_EXT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_REV_NUM__c</fullName>
        <label>FILE_REV_NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_SIZE__c</fullName>
        <label>FILE_SIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FILE_SRC_PATH__c</fullName>
        <label>FILE_SRC_PATH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_SRC_TYPE__c</fullName>
        <label>FILE_SRC_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPD_BY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAST_UPD_BY</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attachments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAST_UPD__c</fullName>
        <label>LAST_UPD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LIBRARY_ID__c</fullName>
        <label>LIBRARY_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PATHONCLIENT__c</fullName>
        <label>PATHONCLIENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHY_FILE_PATH__c</fullName>
        <label>Physical File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachments_Parent_Account</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostDate__c</fullName>
        <formula>IF(ISBLANK(CREATED__c), CreatedDate, CREATED__c  )</formula>
        <label>PostDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RECORD_TYPE_ID__c</fullName>
        <label>RECORD_TYPE_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Updates__c</fullName>
        <defaultValue>-2</defaultValue>
        <description>This field will be used to track the number of times an Attachment has been replaced.</description>
        <label>Total Updates</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X_ATT_TYPE__c</fullName>
        <label>X_ATT_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_SITE_ID__c</fullName>
        <label>X_SITE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>